<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_add_todo"
        android:icon="@drawable/ic_add_menu"
        android:title="@string/add_todo"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/todo_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_logout"
        android:icon="@drawable/ic_logout_menu"
        android:title="@string/log_out"
        app:showAsAction="ifRoom"/>

</menu>