<resources>
    <string name="app_name">TODO List</string>
    <string name="todo_title">Title</string>
    <string name="todo_date">Date</string>
    <string name="delete_todo">Delete TODO</string>
    <string name="todo_title_hint">Title</string>
    <string name="todo_description_hint">Description</string>
    <string name="todo_description">Description</string>
    <string name="todo_color">Color</string>
    <string name="todo_photo">Photo</string>
    <string name="add_todo">New TODO</string>
    <string name="todo_settings">Settings</string>
    <string name="take_photo">Take Photo</string>
    <string name="enter_email">Enter your Email</string>
    <string name="enter_pass">Enter your Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign_up</string>
    <string name="loading">Loading</string>
    <string name="log_out">Log Out</string>
    <string name="tweet">tweet</string>
</resources>
